fix: TwoyiApplication.getStatusBarHeight() — reflection-failure returned 0px instead of 25dp fallback
The original code assigned statusBarHeight=result in a finally block where
result defaulted to 0. If the reflection lookup of
com.android.internal.R$dimen.status_bar_height threw (which happens on
newer Android releases where the field is renamed or access is blocked),
the finally overwrote statusBarHeight to 0 — defeating the 25dp fallback
check below (it tested for < 0). The net effect was 0px status bar height
on affected devices, breaking layout insets.

Also: make statusBarHeight volatile (read by UI threads, written by first
caller), and replace the deprecated Class.newInstance() with
getDeclaredConstructor().newInstance().